{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "Game",
            "id": "12770697-a6a7-41a0-9ea7-56be72fce1b0",
            "actions": [
                {
                    "name": "SelectComponent",
                    "type": "Button",
                    "id": "e7ebee42-b76f-4ed3-81ec-f7e1bcfba742",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.1)",
                    "initialStateCheck": false
                },
                {
                    "name": "FlipComponent",
                    "type": "Button",
                    "id": "1ece06a6-4c85-4b30-937d-7a5aeffea8aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateComponent",
                    "type": "Value",
                    "id": "ac473751-acbd-4245-82cb-16b6b710441c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DisconnectComponent",
                    "type": "Button",
                    "id": "09dc615d-91b3-4aed-90be-eeea479538f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "21fac6ed-286e-44e6-851a-075fccdbc4b3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "SelectComponent",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ef07ed9-c4cf-4667-860c-d2151ab5f887",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FlipComponent",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09c4c9c5-81d2-41ac-82bc-d2922e4763f9",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateComponent",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6137ded-c72e-40d5-8352-6d4d5a39e0eb",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "DisconnectComponent",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse",
            "bindingGroup": "Mouse",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}